--- a/client/package.json
+++ b/client/package.json
@@ -53,5 +53,6 @@
   "devDependencies": {
     "@svgr/webpack": "^5.5.0",
     "file-loader": "^6.2.0"
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
